# otus.lessons.20.01

./: .travis.yml  README.md
docker/: Dockerfile  docker.sh
src/: CMakeLists.txt  main.cpp  processor.h  queue_processor.h  test.cpp
